--- a/copy.html
+++ b/copy.html
@@ -9,8 +9,8 @@
       font-family: 'Arial', sans-serif;
       margin: 0;
       padding: 0;
-      background: #f9f9f9;
-      color: #333;
+      background: #000000;
+      color: #ffffff;
     }
 
     header {
@@ -26,7 +26,7 @@
     }
 
     .container {
-      max-width: 900px;
+      max-width: 90%;
       margin: 0 auto;
       padding: 40px 20px;
     }
@@ -39,7 +39,7 @@
     iframe {
       width: 100%;
       max-width: 720px;
-      height: 400px;
+      height: 500px;
       border: none;
       border-radius: 10px;
     }
@@ -51,7 +51,7 @@
     }
 
     .testimonials {
-      background: #fff;
+      background: #4b4a4a9f;
       padding: 30px;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.05);
@@ -81,7 +81,7 @@
     }
 
     .cta button {
-      background: #ff5722;
+      background: #4caf50;
       color: white;
       font-size: 1.2rem;
       padding: 15px 30px;
@@ -115,6 +115,15 @@
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
+img{
+  height: 30%;
+  width: 30%;
+  display: block;
+  margin: 0 auto;
+}
+.titulo {
+  text-align: center;
+}
 
   </style>
 </head>
@@ -125,6 +134,42 @@
   </header>
 
   <div class="container">
+
+
+    <div class="testimonials">
+      <h1 class="titulo">🚨 ATENÇÃO, BRASIL! 🚨</h1>
+      <h5 class="titulo">Se você está tentando emagrecer, mas vive com fome ou come as mesmas
+          marmitas sem graça todo dia... esse eBook foi FEITO PRA VOCÊ!
+      </h5>
+      <img  src="img/1.png" alt="">
+      
+      <h2>📕 “Receitas FIT para Déficit Calórico” é a arma secreta das pessoas que: <br>
+          ✅ Emagrecem sem passar vontade <br>
+          ✅ Comem bem e continuam secando <br>
+          ✅ Têm mais disposição e autoestima <br>
+          ✅ Não abrem mão do sabor e da praticidade <br>
+          ✅ Param de jogar dinheiro fora com dieta maluca ou app fitness que só enrola <br>
+
+          🔥 Mais de 30 receitas aprovadas por quem tá no corre e não tem tempo a perder! <br>
+          – Frango ao curry com espinafre <br>
+          – Panqueca proteica de banana <br>
+          – Doce fit com 3 ingredientes <br>
+          – E MUITO MAIS! <br>
+        </h2>
+        <h2>🤯 E O MELHOR? <br>
+            📉 Todas as receitas são: <br>
+            ✔️ Rápidas de fazer <br>
+            ✔️ Baratas <br>
+            ✔️ Ricas em proteína <br>
+            ✔️ Com os macros já calculados! <br>
+
+            💥 PROMOÇÃO DE LANÇAMENTO 💥 <br>
+            🔻 De R$ 29,99 por apenas R$ 19,99 🔻 <br>
+            CLIQUE EM “SAIBA MAIS” E GARANTA O SEU!
+        </h2>
+
+
+    </div>
 
     <div class="testimonial-videos">
       <video controls>
